[gd_scene load_steps=4 format=3 uid="uid://bevvx52wpofnq"]

[ext_resource type="PackedScene" uid="uid://cv88ykd3csevh" path="res://dodge_player.tscn" id="1_61u40"]
[ext_resource type="Script" path="res://dodgeball_scene.gd" id="1_maynq"]

[sub_resource type="Curve2D" id="Curve2D_yw7cr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1, 3, 0, 0, 0, 0, 309, 5, 0, 0, 0, 0, 374, 3, 0, 0, 0, 0, 1, 3)
}
point_count = 4

[node name="Dodgeball" type="Node2D"]
script = ExtResource("1_maynq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = -4.0
offset_right = 1154.0
offset_bottom = 646.0
color = Color(0.124083, 0.124083, 0.124083, 1)
metadata/_edit_lock_ = true

[node name="DodgePlayer" parent="." instance=ExtResource("1_61u40")]
position = Vector2(168, 128)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_yw7cr")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
unique_name_in_owner = true
position = Vector2(1, 3)
rotation = 0.00649342

[node name="MobTimer" type="Timer" parent="."]

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
